# Auto-Time-Tracker

./: .gitignore  README.md  pyproject.toml
agent/: classifier.py  collector.py  config.py  idle_detector.py  main.py  utils.py
backend/: Dockerfile
backend/alembic/: readme.txt
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/: activity.py  stats.py
bot/: main.py
bot/utils/: readme.txt
scripts/: script_for_config.py
