[project]
name = "time-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "psutil (>=7.2.2,<8.0.0)",
    "pywin32 (>=311,<312)",
    "pynput (>=1.8.1,<2.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "aiogram (>=3.26.0,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
